# QuadLoco

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md  fromTpqz  genGraph.sh  ideaGeneral.txt  ideaRenames.txt  plan.txt
cmake/: BuildFlags.cmake  CMakeLists.txt
data/: p5q5.pgm  p5q6.pgm  p5q6r90.pgm
demo/: CMakeLists.txt  _.cpp  demoEdgeDirAD.cpp  demoEvalSamples.cpp  demoFilter.cpp  demoFinder.cpp  demoLineFind.cpp  demoPGM.cpp  demoSegDir.cpp  demoSimFind.cpp  demoSimQuadImage.cpp  demoSymmetry.cpp  demoVersion.cpp  demo_version.cpp
doc/: CMakeLists.txt  Doxyfile.in  QuadLocoGraphic.xcf
eval/: CMakeLists.txt  evalCenterFinding.cpp  evalCenterFinding.plt  evalReadPGM.cpp  evalSampleCenterFind.cpp  evalSampleDiffManual.cpp  evalSampleSumSqDiff.cpp  evalSampleSymRing.cpp  foo.cpp
include/: QuadLoco  QuadLoco.hpp  _.hpp  ang.hpp  angLikely.hpp  angRing.hpp  app.hpp  appCenters.hpp  appQuadLike.hpp  appcenter.hpp  appkeyed.hpp  cast.hpp  dat.hpp  datArea.hpp  datChipSpec.hpp  datCircle.hpp  datExtents.hpp  datFence.hpp  datGrid.hpp  datMapSizeArea.hpp  datRing.hpp  datRowCol.hpp  datSizeHW.hpp  datSizeMap.hpp  datSpan.hpp  datSpot.hpp  datVec2D.hpp  fnd.hpp  fndHoughAD.hpp  fndParmAD.hpp  hough.hpp  houghAdderAD.hpp  houghHoughAD.hpp  houghParmAD.hpp  img.hpp  imgArea.hpp  imgCamera.hpp  imgChipSpec.hpp  imgCircle.hpp  imgEdgel.hpp  (+91 more)
include/QuadLoco/: QuadLoco  QuadLoco.hpp  ang.hpp  angRing.hpp  app.hpp  appAzimCycle.hpp  appQuadLike.hpp  appcenter.hpp  appkeyed.hpp  cast.hpp  img.hpp  imgArea.hpp  imgCircle.hpp  imgEdgel.hpp  imgGrad.hpp  imgHit.hpp  imgQuadTarget.hpp  imgRay.hpp  imgSpot.hpp  imgVector.hpp  io.hpp  mat.hpp  matEigen2D.hpp  matfunc.hpp  mattype.hpp  mea.hpp  meaCluster.hpp  meaCovar.hpp  meaVector.hpp  obj.hpp  objCamera.hpp  objQuadTarget.hpp  ops.hpp  opsAllPeaks2D.hpp  opsAngleTracker.hpp  opsCenterRefinerEdge.hpp  opsCenterRefinerSSD.hpp  opsPeakFinder1D.hpp  opsSymRing.hpp  opsfilter.hpp  (+24 more)
src/: CMakeLists.txt  QuadLoco.cpp
test/: CMakeLists.txt  _.cpp  test_Version.cpp  test_angLikely.cpp  test_angRing.cpp  test_appAzimCycle.cpp  test_appCenters.cpp  test_appCenters.plt  test_appQuadLike.cpp  test_appRealData.cpp  test_cast.cpp  test_datArea.cpp  test_datChipSpec.cpp  test_datCircle.cpp  test_datExtents.cpp  test_datFence.cpp  test_datGrid.cpp  test_datMapSizeArea.cpp  test_datRing.cpp  test_datRowCol.cpp  test_datSizeHW.cpp  test_datSizeMap.cpp  test_datSpan.cpp  test_datSpot.cpp  test_datVec2D.cpp  test_fndHoughAD.cpp  test_fndParmAD.cpp  test_houghAdderAD.cpp  test_houghFindAD.cpp  test_houghHoughAD.cpp  test_houghParmAD.cpp  test_imgArea.cpp  test_imgCamera.cpp  test_imgChipSpec.cpp  test_imgCircle.cpp  test_imgEdgel.cpp  test_imgGrad.cpp  test_imgHit.cpp  test_imgQuadTarget.cpp  test_imgRay.cpp  (+64 more)
theory/: AlgorithmSummary.lyx  CurvatureNotes.txt  EdgelCross.lyx  EdgelCrossMeet.ipe  HoughModel.lyx  HoughModel_CircleAlphaDelta.ipe  HoughModel_CircleBounds.ipe  HoughModel_CircleWithEdge.ipe  QuadInfo.lyx  References.bib
